--- a/build.gradle
+++ b/build.gradle
@@ -11,12 +11,8 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.6.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
         // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module buifggfgfgfggfggfgld.gradle files
+        // in the individual module build.gradle files
     }
 }
 
